--- a/website-view/src/components/Menubar/menubar.scss
+++ b/website-view/src/components/Menubar/menubar.scss
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 2rem;
+    height: 100vh;
 
     @include md{
         padding: 1rem;
@@ -12,7 +13,7 @@
     &__top{
         display: flex;
         flex-direction: column;
-        gap: 3rem;
+        gap: 2rem;
 
         &__logo{
             display: flex;
@@ -23,5 +24,102 @@
                 font-size: 2rem;
             }
         }
+
+        &__lists{
+            display: flex;
+            flex-direction: column;
+            gap: .5rem;
+
+            &__item{
+                text-decoration: none;
+                color: #8E92BC;
+                border-radius: 10px;
+                transition: all ease-in-out 300ms;
+
+                &__each{
+                    display: flex;
+                    align-items: center;
+                    gap: .5rem;
+                    padding: 0px 10px;
+
+                    p{
+                        font-size: 14px;
+                    }
+                    span{
+                        font-size: 22px;
+                    }
+                }
+            }
+            &__item:hover, &__item:active{
+                color: #141522;
+                background-color: #F5F5F7;
+                        font-weight: 500;
+            }
+        }
+    }
+
+    &__bottom{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        margin-bottom: 3rem;
+        padding: 1rem;
+        background-image: url("../../assets/pexels-kubiceknov-924824.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-radius: 10px;
+        height: 248px;
+        position: relative;
+
+        &__top{
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            h4{
+                color: #fff;
+                line-height: 0;
+                margin: .5rem;
+                font-weight: 400;
+            }
+            p{
+                color: #fff;
+                font-size: .8rem;
+                margin-bottom: -2rem;
+                text-align: center;
+                font-weight: 300;
+            }
+        }
+
+        &__btn{
+            background-color: #fff;
+            color: #141522;
+            border-style: none;
+            border-radius: 10px;
+            padding: 12px 24px;
+        }
+        &__btn:hover{
+            animation: scale-down-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+        }
+
+                @keyframes scale-down-center {
+                    0% {
+                        transform: scale(1);
+                    }
+        
+                    100% {
+                        transform: scale(0.9);
+                    }
+                }
+
+        img{
+            position: absolute;
+            top: -15%;
+            left: 25%;
+        }
+
     }
 }
