--- a/website-view/src/components/Layout/layout.scss
+++ b/website-view/src/components/Layout/layout.scss
@@ -2,7 +2,7 @@
 
 .layout{
     display: flex;
-    max-width: 1536px;
+    width: 100%;
     height: 100vh;
     
     &__menu{
@@ -14,5 +14,6 @@
     &__main{
         flex: 1;
         margin-left: 16rem;
+        width: 100%;
     }
 }
