--- a/website-view/src/index.css
+++ b/website-view/src/index.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
 body, html{
-    margin: 0;
+    margin: 0 auto;
+    max-width: 1920px;
 }
 
 *{
