--- a/website-view/src/pages/Overview/overview.scss
+++ b/website-view/src/pages/Overview/overview.scss
@@ -42,6 +42,7 @@
             justify-content: space-between;
             align-items: center;
             gap: 2rem;
+            padding: 1rem;
 
             &__progress{
                 border-radius: 10px;
@@ -88,6 +89,9 @@
 
             &__activity{
                 flex: 1;
+                background-color: #F5F5F7;
+                padding: 1rem;
+                border-radius: 3px;
             }
         }
     }
