--- a/website-view/src/pages/Overview/overview.scss
+++ b/website-view/src/pages/Overview/overview.scss
@@ -39,7 +39,7 @@
 
         &__charts{
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
             gap: 2rem;
             padding: 1rem;
@@ -48,6 +48,7 @@
                 border-radius: 10px;
                 padding: 1rem 1rem 0;
                 background-color: #141522;
+                height: 245px;
 
                 &__h4{
                     font-size: 16px;
@@ -92,17 +93,22 @@
                 background-color: #F5F5F7;
                 padding: 1rem;
                 border-radius: 3px;
+                max-width: 1000px;
             }
         }
     }
 
     &__side{
         background-color: #F5F5F7;
-        padding: 2rem;
+        padding: 1rem;
         height: 100vh;
+        overflow: scroll;
+        display: flex;
+        justify-content: center;
 
         &__date{
-            width: 100%;
+            width: 95%;
+            overflow-x: hidden;
         }
     }
 
