--- a/website-view/src/components/Menubar/menubar.scss
+++ b/website-view/src/components/Menubar/menubar.scss
@@ -5,6 +5,9 @@
     justify-content: space-between;
     padding: 2rem;
     height: 100vh;
+    position: relative;
+    transition: all ease-in-out 1s;
+    box-shadow: 5px 0px 15px -3px rgba(0,0,0,0.1);
 
     @include md{
         padding: 1rem;
@@ -18,10 +21,13 @@
         &__logo{
             display: flex;
             gap: 12px;
+            margin-top: 3rem;
 
             h1{
                 font-weight: 600;
                 font-size: 2rem;
+                width: fit-content;
+                transition: width ease-in-out 300ms, opacity ease-in-out 0;
             }
         }
 
@@ -40,7 +46,9 @@
                     display: flex;
                     align-items: center;
                     gap: .5rem;
-                    padding: 0px 10px;
+                    padding: 2px 10px;
+                    width: fit-content;
+                    transition: all ease-in-out 300ms;
 
                     p{
                         font-size: 14px;
@@ -71,6 +79,8 @@
         border-radius: 10px;
         height: 248px;
         position: relative;
+        width: fit-content;
+        transition: width ease-in-out 300ms, opacity ease-in-out 0;
 
         &__top{
             flex: 1;
@@ -128,4 +138,27 @@
     color: #141522;
     background-color: #F5F5F7;
     font-weight: 500;
+}
+
+.menubar__icon{
+    position: absolute;
+    right: 10;
+    z-index: 1;
+    padding: .5rem 1rem;
+
+    svg{
+        width: 30px;
+        height: 30px;
+    }
+}
+
+.h1__active, .help__active, .list__active{
+    opacity: 0;
+    width: 0 !important;
+}
+.each__active{
+    width: fit-content;
+}
+.menu__active{
+    padding: 2rem 1rem;
 }
