--- a/website-view/src/index.css
+++ b/website-view/src/index.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
-body, html{
-    margin: 0 auto;
-    max-width: 1920px;
+body{
+    margin: auto;
+    max-width: 2156px;
+    overflow: hidden;
 }
 
 *{
