--- a/website-view/src/components/Menubar/menubar.scss
+++ b/website-view/src/components/Menubar/menubar.scss
@@ -46,7 +46,7 @@
                     display: flex;
                     align-items: center;
                     gap: .5rem;
-                    padding: 2px 10px;
+                    padding: 0px 10px;
                     width: fit-content;
                     transition: all ease-in-out 300ms;
 
@@ -54,7 +54,7 @@
                         font-size: 14px;
                     }
                     span{
-                        font-size: 22px;
+                        font-size: 20px;
                     }
                 }
             }
@@ -146,6 +146,11 @@
     z-index: 1;
     padding: .5rem 1rem;
 
+    @include md{
+        right: 5;
+        padding: .5rem;
+    }
+
     svg{
         width: 30px;
         height: 30px;
@@ -160,5 +165,9 @@
     width: fit-content;
 }
 .menu__active{
-    padding: 2rem 1rem;
+    padding: 2rem .5rem;
+
+    @include md{
+        padding: 2rem 0rem;
+    }
 }
