side overview finish

--- a/website-view/src/components/Layout/layout.scss
+++ b/website-view/src/components/Layout/layout.scss
@@ -14,7 +14,7 @@
     }
     &__main{
         flex: 1;
-        overflow-x: scroll;
+        overflow-y: scroll;
         padding-left: 4.4rem;
         width: 100%;
 
