--- a/website-view/src/components/General/general.scss
+++ b/website-view/src/components/General/general.scss
@@ -18,7 +18,12 @@
     font-size: 14px;
 }
 .rdp-day_button{
-    height: 30px !important;
+    height: 15px !important;
+    border-radius: 0 !important;
+
+    @include sm{
+        width: 30px !important;
+    }
 }
 .rdpx-nav {
     font-size: 18px;
@@ -47,4 +52,67 @@
 }
 .rdp-months{
     max-width: 100% !important;
+}
+
+
+// card styles
+.card{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    &__bottom{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        
+        &__top{
+            h3{
+                margin: 0;
+                font-size: 16px;
+                font-weight: 600;
+
+                @include lg{
+                    font-size: 14px;
+                }
+            }
+            h4{
+                margin: 0;
+                font-size: 12px;
+                font-weight: 300;
+            }
+        }
+        &__middle{
+            &__text{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                p{
+                    font-size: 16px;
+                    font-weight: 400;
+                    font-weight: 500;
+
+                    @include sm{
+                        font-size: 14px;
+                    }
+                }
+                span{
+                    font-size: 16px;
+                    color: #546FFF;
+                }
+            }
+        }
+        &__footer{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            &__left{
+                display: flex;
+                align-items: center;
+                gap: .3rem;
+            }
+        }
+    }
 }
