--- a/website-view/src/components/Menubar/menubar.scss
+++ b/website-view/src/components/Menubar/menubar.scss
@@ -46,7 +46,7 @@
                     display: flex;
                     align-items: center;
                     gap: .5rem;
-                    padding: 0px 10px;
+                    padding: 10px;
                     width: fit-content;
                     transition: all ease-in-out 300ms;
 
