--- a/website-view/src/pages/Overview/overview.scss
+++ b/website-view/src/pages/Overview/overview.scss
@@ -90,6 +90,10 @@
                 flex-direction: column;
             }
 
+            @include sm{
+                padding: 0rem;
+            }
+
             &__progress{
                 border-radius: 10px;
                 padding: 1rem 1rem 0;
@@ -164,14 +168,100 @@
     &__side{
         background-color: #F5F5F7;
         padding: 1rem;
-        height: 100vh;
-        overflow: scroll;
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 2rem;
 
         &__date{
-            width: 95%;
+            width: 100%;
             overflow-x: hidden;
+
+            @include lg{
+                width: 100%;
+            }
+        }
+
+        &__task{
+            width: 100%;
+            // overflow-x: hidden;
+            padding: 1rem;
+            background-color: #fff;
+            border-radius: 10px;
+
+            &__h1{
+                font-size: 14px;
+                font-weight: 600;
+                margin-bottom: 1rem;
+            }
+
+            &__card{
+                width: 100%;
+                margin-bottom: 2rem;
+            }
+        }
+
+        &__list{
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+            padding: 2rem 0rem 1rem;
+
+            &__top{
+                display: flex;
+                justify-content: space-between;
+
+                h3{
+                    font-size: 16px;
+                    font-weight: 600;
+                }
+                p{
+                    font-size: 12px;
+                    font-weight: 400;
+                }
+            }
+
+            &__middle{
+                display: flex;
+                flex-direction: column;
+                gap: .5rem;
+
+                &__each{
+                    display: flex;
+                    align-items: center;
+                    gap: 1rem;
+
+                    div{
+                        background-color: #F5F5F7;
+                        color: #000;
+                        width: 2rem;
+                        height: 2rem;
+                        border-radius: 10px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        font-size: 14px;
+                    }
+                    p{
+                        font-size: 14px;
+                        font-weight: 600;
+
+                        @include sm{
+                            font-size: 12px;
+                        }
+                    }
+                }
+            }
+
+            &__bottom{
+                width: 100%;
+                border-radius: 10px;
+                background-color: #546FFF;
+                color: #fff;
+                font-size: 14px;
+                font-weight: 500;
+                padding: 12px;
+            }
         }
     }
 
