--- a/website-view/src/components/General/general.scss
+++ b/website-view/src/components/General/general.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 .date-picker-container {
     padding: 10px;
     background-color: #FFFFFF;
@@ -60,6 +63,14 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    border-radius: 15px;
+
+    @include lg{
+        max-width: 350px;
+    }
+    @include md{
+        max-width: 300px;
+    }
 
     &__bottom{
         display: flex;
@@ -75,11 +86,17 @@
                 @include lg{
                     font-size: 14px;
                 }
+                @include sm{
+                    font-size: 12px;
+                }
             }
             h4{
                 margin: 0;
                 font-size: 12px;
                 font-weight: 300;
+                @include sm{
+                    font-size: 10px;
+                }
             }
         }
         &__middle{
@@ -94,12 +111,16 @@
                     font-weight: 500;
 
                     @include sm{
-                        font-size: 14px;
+                        font-size: 12px;
                     }
                 }
                 span{
                     font-size: 16px;
                     color: #546FFF;
+
+                    @include sm{
+                        font-size: 12px;
+                    }
                 }
             }
         }
@@ -112,7 +133,187 @@
                 display: flex;
                 align-items: center;
                 gap: .3rem;
+
+                p{
+                    @include sm{
+                        font-size: 12px;
+                    }
+                }
             }
+            img{
+                @include sm{
+                    width: 70px;
+                }
+            }
+        }
+    }
+}
+
+.userCard{
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: -2px 2px 15px -3px rgba(0,0,0,0.1);
+    padding: 2rem;
+    max-width: 700px;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+
+    @include sm{
+        max-width: 350px;
+        padding: 1rem;
+    }
+
+    @include lg{
+        padding: 1rem;
+    }
+
+    &__top{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        &__left{
+            display: flex;
+            align-items: center;
+            gap: .5rem;
+
+            img{
+                @include sm{
+                    width: 30px;
+                }
+            }
+
+            h4{
+                font-size: 16px;
+                font-weight: 600;
+                color: #141522;
+
+                @include sm{
+                    font-size: 14px;
+                }
+            }
+            h5{
+                font-size: 12px;
+                color: #54577A;
+
+                @include sm{
+                    font-size: 10px;
+                }
+            }
+        }
+
+        &__right{
+            &__follow{
+                font-size: 14px;
+                color: #546FFF;
+                font-weight: 300;
+                @include sm{
+                    font-size: 12px;
+                }
+            }
+            &__followed{
+                font-size: 14px;
+                color: #9C9CA4;
+                @include sm{
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+
+    &__bottom{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        &__left{
+            display: flex;
+            gap: .2rem;
+            align-items: center;
+
+            p{
+                color: #141522;
+                font-size: 14px;
+                font-weight: 600;
+
+                @include sm{
+                    font-size: 12px;
+                }
+            }
+
+            svg{
+                width: 20px;
+                height: 20px;
+            }
+        }
+
+        &__right{
+            display: flex;
+            gap: .3rem;
+
+            p{
+                font-size: 14px;
+                color: #141522;
+                font-weight: 600;
+
+                @include sm{
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+}
+
+.slick-track{
+    display: flex;
+    gap: 2rem;
+    padding: 1rem 0;
+
+    @include lg{
+        gap: 1rem !important;
+    }
+    @include sm{
+        gap: .5rem !important;
+    }
+}
+.slick-next:before{
+    color: #000 !important;
+    font-family: "Roboto", sans-serif !important;
+    content: '›' !important;
+    font-size: 40px !important;
+    line-height: 0.5 !important;
+}
+.slick-prev:before{
+    color: #000 !important;
+    font-family: "Roboto", sans-serif !important;
+    content: '‹' !important;
+    font-size: 40px !important;
+    line-height: 0.5 !important;
+    margin-left: 1rem;
+}
+.slick-slider{
+    margin: 0 1rem;
+}
+
+
+.carousel{
+    margin: 2rem 0rem;
+
+    &__title{
+        font-size: 26px;
+        font-weight: 600; 
+        color: #141522;
+        padding-left: 1rem;
+
+        @include lg{
+            padding-left: 1rem;
+            font-size: 22px;
+        }
+
+        @include sm{
+            font-size: 20px;
+            padding-left: .5rem;
         }
     }
 }
