--- a/website-view/src/pages/Overview/overview.scss
+++ b/website-view/src/pages/Overview/overview.scss
@@ -176,7 +176,7 @@
         flex-direction: column;
         justify-content: flex-start;
         gap: 2rem;
-        height: 100vh;
+        height: 100%;
 
         @include xxl{
             height: 100%;
